Bug 923917 - Make CompositableClient not crash when texture serialization fails. r=nrc