gfx/layers/ipc/CompositableForwarder.h
@@ -153,7 +153,7 @@ public:
    * Tell the compositor side to create a TextureHost that corresponds to
    * aClient.
    */
-  virtual void AddTexture(CompositableClient* aCompositable,
+  virtual bool AddTexture(CompositableClient* aCompositable,
                           TextureClient* aClient) = 0;
 
   /**
